--- a/Applications/Android/Samples/AndroidManifest.xml
+++ b/Applications/Android/Samples/AndroidManifest.xml
@@ -5,27 +5,60 @@
     android:versionCode="52"
     android:versionName="master-SNAPSHOT" >
 
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="22"
+        />
+
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-library android:name="com.google.android.maps" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="22" />
+
+
 
     <application
         android:name=".SamplesApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:label="Mapsforge Samples" >
-        <activity android:name=".Samples" >
+        android:label="Mapsforge Samples"
+        android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+    </application>
+
+    <activity
+        android:name=".MapsActivity"
+        android:label="@string/app_name" >
+    </activity>
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="@string/google_maps_key" />
+
+
+    <activity
+            android:name=".TestView"
+            android:label="En test view"/>
         <activity
             android:name=".BasicMapViewerV3"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -145,7 +178,7 @@
         <activity
             android:name=".ItemListActivity"
             android:label="Fragments Item List"
-            android:parentActivityName="org.mapsforge.applications.android.samples.Samples" >
+            android:parentActivityName=".Samples" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.mapsforge.applications.android.samples.Samples" />
@@ -167,6 +200,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Samples" />
         </activity>
-    </application>
+
 
 </manifest>
