--- a/mapsforge-map-android/build.gradle
+++ b/mapsforge-map-android/build.gradle
@@ -1,7 +1,11 @@
 dependencies {
-  compile project(":mapsforge-map")
-  compile group: 'com.caverock', name: 'androidsvg', version:'1.2.2-beta-1'
+  compile project(':mapsforge-map')
+  compile 'com.caverock:androidsvg:1.2.2-beta-1'
 }
 
 
 
+
+android {
+  compileSdkVersion 22
+}
