--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include ':test'
 include "mapsforge-core", "mapsforge-map-reader", "mapsforge-map", "mapsforge-map-writer", "mapsforge-map-awt","mapsforge-map-android", "Applications:Android:Samples", "SwingMapViewer"
 
 
