la til restrerende intellij

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,26 @@ proguard/
 captures/
 
 # Intellij
-.idea/
+.idea
+*.iml
+local.properties
+
+# Maven
+target
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Eclipse
+.settings
+bin
+gen
+.classpath
+.project
+
+# Emacs
+*~
+[#]*[#]
+.\#*
