--- a/Applications/Android/Samples/AndroidManifest.xml
+++ b/Applications/Android/Samples/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Samples"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
 
     </application>
@@ -59,8 +58,7 @@
         android:name="com.google.android.maps.v2.API_KEY"
         android:value="@string/google_maps_key" />
 
-
-    <activity
+        <activity
             android:name=".TestView"
             android:label="En test view"/>
         <activity
