--- a/Applications/Android/Samples/build.gradle
+++ b/Applications/Android/Samples/build.gradle
@@ -3,11 +3,13 @@ apply plugin: 'com.android.application'
 dependencies {
     compile project(':mapsforge-map-android')
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1:'
-    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v13:23.1.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-identity:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
 
 
@@ -32,5 +34,8 @@ android {
     }
     buildToolsVersion '23.0.2'
 }
+
+
+
 
 
